--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Please do not use this ignore file to define platform specific files.
+#
+# For these purposes create a global .gitignore file, which is a list of rules
+# for ignoring files in every Git repository on your computer.
+#
+# https://help.github.com/articles/ignoring-files/#create-a-global-gitignore
+
 /output-virtualbox-iso
 /packer_cache/*
 *.box
-iso/*
+/iso/*
 .vagrant/*
