Add timezone support to MySQL

--- a/ansible/roles/config/tasks/main.yml
+++ b/ansible/roles/config/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Configure php-fpm/php.ini.
+- name: Configure php-fpm/php.ini
   lineinfile:
     dest: "/etc/php/7.1/fpm/php.ini"
     regexp: "{{ item.regexp }}"
@@ -9,13 +9,13 @@
     - regexp: '^;cgi\.fix_pathinfo.?=.+$'
       line: "cgi.fix_pathinfo = 1"
 
-- name: Disable xdebux for PHP-CLI.
+- name: Disable xdebux for PHP-CLI
   command: phpdismod -s cli xdebug
 
-- name: Update PECL.
+- name: Update PECL
   command: pecl channel-update pecl.php.net
 
-- name: Configure pool.d/www.conf.
+- name: Configure pool.d/www.conf
   lineinfile:
     dest: "/etc/php/7.1/fpm/pool.d/www.conf"
     regexp: "{{ item.regexp }}"
@@ -29,7 +29,7 @@
     - regexp: '^;listen\.mode.?=.+$'
       line: "listen.mode = 0666"
 
-- name: Self-signing a CSR for a wildcard domain.
+- name: Self-signing a CSR for a wildcard domain
   lineinfile:
     dest: "/etc/ssl/openssl.cnf"
     regexp: "{{ item.regexp }}"
@@ -39,7 +39,7 @@
     - regexp: '^#.?(copy_extensions.?=.+)$'
       line: "copy_extensions = copy"
 
-- name: Copy xdebug ini into main extension config folder.
+- name: Copy xdebug ini into main extension config folder
   template:
     src: /tmp/ansible/templates/xdebug.ini.j2
     dest: "{{ php_conf_path }}/mods-available/xdebug.ini"
@@ -55,7 +55,7 @@
     group: root
     mode: 0755
 
-- name: Setting up the Postgres.
+- name: Setting up the Postgres
   lineinfile:
     dest: "/etc/postgresql/9.5/main/postgresql.conf"
     regexp: "{{ item.regexp }}"
@@ -65,7 +65,7 @@
     - regexp: '^#.?(listen_addresses.?=.+)$'
       line: "listen_addresses = '*'"
 
-- name: Create phalcon user and grant privileges.
+- name: Create phalcon user and grant privileges
   postgresql_user:
     name: phalcon
     password: secret
@@ -73,7 +73,7 @@
     role_attr_flags: NOSUPERUSER,CREATEDB,NOCREATEROLE,NOREPLICATION,LOGIN
   become_user: postgres
 
-- name: Update postgres user.
+- name: Update postgres user
   postgresql_user:
     name: postgres
     password: secret
@@ -81,16 +81,17 @@
     state: present
   become_user: postgres
 
-- name: Allow passwordless sudo to vagrant.
+- name: Allow passwordless sudo to vagrant
   lineinfile:
     dest: "/etc/sudoers"
     line: "%sudo ALL=(ALL,ALL) NOPASSWD{{':'}} ALL"
     state: present
 
-# - name: Add timezone support to MySQL.
-#   command: "mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --user=root --password=secret mysql"
+- name: Add timezone support to MySQL
+  shell: |
+    mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --user=root --password=secret mysql
 
-- name: Add vagrant user to groups.
+- name: Add vagrant user to groups
   user:
     name: vagrant
     uid: 1000
