--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -2,15 +2,39 @@
 - name: Install packages.
   apt: "name={{ item }} state=installed"
   with_items:
-    - wget
+    - autoconf
+    - automake
+    - autotools-dev
+    - binutils
+    - ccache
+    - check
+    - chromium-browser
+    - cifs-utils
+    - cppcheck
     - curl
-    - vim
     - dh-php
-    - python-pip
-    - python-software-properties
-    - python2.7-dev
-    - whois
-    - sqlite3
+    - dos2unix
+    - file
+    - g++
+    - gcc
+    - gdb
+    - graphviz
+    - grc
+    - gtk2-engines-pixbuf
+    - htop
+    - jq
+    - kcachegrind
+    - libgconf-2-4
+    - libgtk2.0-0
+    - libmcrypt4
+    - libnotify-bin
+    - libnss3
+    - libsodium-dev
+    - libsqlite3-dev
+    - libssh2-1-dev
+    - libssl-dev
+    - libxpm4
+    - libxrender1
     - libyaml-dev
     - lsb-release
     - lxd
@@ -19,51 +43,23 @@
     - ntfs-3g
     - ntp
     - pkg-config
-    - python-psycopg2
     - pv
+    - python-pip
+    - python-psycopg2
+    - python-software-properties
+    - python2.7-dev
     - re2c
-    - cifs-utils
-    - libsodium-dev
-    - libsqlite3-dev
-    - libssl-dev
-    - libssh2-1-dev
-    - libmcrypt4
+    - sqlite3
+    - unattended-upgrades
     - unzip
     - valgrind
-    - htop
-    - jq
-    - grc
-    - cppcheck
-    - dos2unix
-    - file
-    - g++
-    - gcc
-    - autoconf
-    - automake
-    - autotools-dev
-    - binutils
-    - ccache
-    - check
-    - gdb
-    # - chromium-browser
-    # - graphviz
-    # - gtk2-engines-pixbuf
-    # - kcachegrind
-    # - libgconf-2-4
-    # - libgtk2.0-0
-    # - libnotify-bin
-    # - libnss3
-    # - libxpm4
-    # - libxrender1
-    # - unattended-upgrades
-    # - x11-apps
-    # - xfonts-100dpi
-    # - xfonts-75dpi
-    # - xfonts-base
-    # - xfonts-cyrillic
-    # - xfonts-scalable
-    # - xvfb
-    # - postgresql
-    # - postgresql-client-common
-    # - postgresql-common
-    # - postgresql-contrib
+    - vim
+    - wget
+    - whois
+    - x11-apps
+    - xfonts-100dpi
+    - xfonts-75dpi
+    - xfonts-base
+    - xfonts-cyrillic
+    - xfonts-scalable
+    - xvfb
