--- a/ansible/roles/weakref/tasks/main.yml
+++ b/ansible/roles/weakref/tasks/main.yml
@@ -10,7 +10,7 @@
     owner: root
     group: root
     mode: 0644
-  when: weakref_stat.stat.exists
+  when: not weakref_stat.stat.exists
 
 - name: Enable weakref extension
   command: phpenmod weakref
