--- a/ansible/roles/config/tasks/main.yml
+++ b/ansible/roles/config/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Configure php-fpm/php.ini
   lineinfile:
-    dest: "/etc/php/7.1/fpm/php.ini"
+    dest: "{{ php_fpm_conf_path }}/php.ini"
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
     state: present
@@ -17,7 +17,7 @@
 
 - name: Configure pool.d/www.conf
   lineinfile:
-    dest: "/etc/php/7.1/fpm/pool.d/www.conf"
+    dest: "{{ php_fpm_pool_conf_path }}"
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
     state: present
