--- a/ansible/vars/geerlingguy-php.yml
+++ b/ansible/vars/geerlingguy-php.yml
@@ -1,5 +1,4 @@
 ---
-  php_version: "7.1"
   php_use_managed_ini: true
   php_install_recommends: no
   php_enable_php_fpm: true
@@ -14,23 +13,38 @@
   php_date_timezone: "UTC"
   php_post_max_size: "100M"
   php_upload_max_filesize: "100M"
+
   php_enable_apc: true
   php_apc_enable_cli: "1"
+
   php_opcache_enable: "1"
   php_opcache_enable_cli: "1"
   php_opcache_revalidate_freq: "0"
-  php_mysql_package: php7.1-mysql
-  php_fpm_conf_path: "/etc/php/7.1/fpm"
-  php_fpm_daemon: php7.1-fpm
+
+  php_version: "7.1"
+  php_mysql_package: "php{{ php_version }}-mysql"
+  php_conf_path: "/etc/php/{{ php_version }}"
+
+  php_apache2_conf_path: "{{ php_conf_path }}/apache2"
+  php_cli_conf_path: "{{ php_conf_path }}/cli"
+  php_fpm_conf_path: "{{ php_conf_path }}/fpm"
+  php_phpdbg_conf_path: "{{ php_conf_path }}/phpdbg"
+
+  php_fpm_pool_conf_path: "{{ php_fpm_conf_path }}/pool.d/www.conf"
+  php_fpm_daemon: "php{{ php_version }}-fpm"
+
   php_extension_conf_paths:
-    - /etc/php/7.1/fpm/conf.d
-    - /etc/php/7.1/apache2/conf.d
-    - /etc/php/7.1/cli/conf.d
+    - "{{ php_apache2_conf_path }}/conf.d"
+    - "{{ php_cli_conf_path }}/conf.d"
+    - "{{ php_fpm_conf_path }}/conf.d"
+    - "{{ php_phpdbg_conf_path }}/conf.d"
+
   php_conf_paths:
-    - /etc/php/7.1/fpm
-    - /etc/php/7.1/apache2
-    - /etc/php/7.1/cli
-  php_conf_path: /etc/php/7.1
+    - "{{ php_apache2_conf_path }}"
+    - "{{ php_cli_conf_path }}"
+    - "{{ php_fpm_conf_path }}"
+    - "{{ php_phpdbg_conf_path }}"
+
   php_packages:
     - build-essential
     - imagemagick
@@ -52,34 +66,34 @@
     - php-ssh2
     - php-xdebug
     - php-yaml
-    - php7.1-bcmath
-    - php7.1-bz2
-    - php7.1-cli
-    - php7.1-common
-    - php7.1-curl
-    - php7.1-dba
-    - php7.1-dev
-    - php7.1-fpm
-    - php7.1-gd
-    - php7.1-gmp
-    - php7.1-imap
-    - php7.1-intl
-    - php7.1-json
-    - php7.1-ldap
-    - php7.1-mbstring
-    - php7.1-mcrypt
-    - php7.1-mysql
-    - php7.1-odbc
-    - php7.1-opcache
-    - php7.1-pgsql
-    - php7.1-phpdbg
-    - php7.1-pspell
-    - php7.1-readline
-    - php7.1-recode
-    - php7.1-soap
-    - php7.1-sqlite3
-    - php7.1-tidy
-    - php7.1-xml
-    - php7.1-xmlrpc
-    - php7.1-xsl
-    - php7.1-zip
+    - "php{{ php_version }}-bcmath"
+    - "php{{ php_version }}-bz2"
+    - "php{{ php_version }}-cli"
+    - "php{{ php_version }}-common"
+    - "php{{ php_version }}-curl"
+    - "php{{ php_version }}-dba"
+    - "php{{ php_version }}-dev"
+    - "php{{ php_version }}-fpm"
+    - "php{{ php_version }}-gd"
+    - "php{{ php_version }}-gmp"
+    - "php{{ php_version }}-imap"
+    - "php{{ php_version }}-intl"
+    - "php{{ php_version }}-json"
+    - "php{{ php_version }}-ldap"
+    - "php{{ php_version }}-mbstring"
+    - "php{{ php_version }}-mcrypt"
+    - "php{{ php_version }}-mysql"
+    - "php{{ php_version }}-odbc"
+    - "php{{ php_version }}-opcache"
+    - "php{{ php_version }}-pgsql"
+    - "php{{ php_version }}-phpdbg"
+    - "php{{ php_version }}-pspell"
+    - "php{{ php_version }}-readline"
+    - "php{{ php_version }}-recode"
+    - "php{{ php_version }}-soap"
+    - "php{{ php_version }}-sqlite3"
+    - "php{{ php_version }}-tidy"
+    - "php{{ php_version }}-xml"
+    - "php{{ php_version }}-xmlrpc"
+    - "php{{ php_version }}-xsl"
+    - "php{{ php_version }}-zip"
