Fixed ngrok installation

--- a/ansible/ubuntu1604.yml
+++ b/ansible/ubuntu1604.yml
@@ -37,7 +37,7 @@
     - zephir-parser
     - phalcon.zephir
     - f500.beanstalkd
-    - wtanaka.ngrok
+    - phalcon.ngrok
     - youbond.supervisor
     - goreplace
     - config
