--- a/ansible/roles/cleanup/tasks/main.yml
+++ b/ansible/roles/cleanup/tasks/main.yml
@@ -13,17 +13,17 @@
     - apt -y autoclean
 
 - name: Fix file permissions
-- file:
+  file:
     path: "{{ item }}"
     owner: root
     group: root
     mode: "u=rw,g=r,o=r"
   with_items:
-    - etc/systemd/system/mailhog.service
+    - /etc/systemd/system/mailhog.service
 
 - name: Remove not needed files
   file:
-    path: {{ item }}
+    path: "{{ item }}"
     state: absent
   with_items:
     - /usr/local/bin/bash
