--- a/ansible/ubuntu1604.yml
+++ b/ansible/ubuntu1604.yml
@@ -49,20 +49,11 @@
     - php-libs
     - php
     - nginx
+    - openssl
     - vagrant
     - cleanup
 
   tasks:
-    - name: Self-signing a CSR for a wildcard domain
-      lineinfile:
-        dest: "/etc/ssl/openssl.cnf"
-        regexp: "{{ item.regexp }}"
-        line: "{{ item.line }}"
-        state: present
-      with_items:
-        - regexp: '^#.?(copy_extensions.?=.+)$'
-          line: "copy_extensions = copy"
-
     - name: Add timezone support to MySQL
       shell: |
         mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --user=root --password=secret mysql
