--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -34,18 +34,27 @@
     - htop
     - jq
     - kcachegrind
+    - libbz2-dev
+    - libcurl4-gnutls-dev
     - libgconf-2-4
     - libgtk2.0-0
+    - libjpeg-turbo8-dev
+    - libmcrypt-dev
     - libmcrypt4
     - libnotify-bin
     - libnss3
+    - libpng-dev
+    - libreadline-dev
     - libreadline-dev
     - libsodium-dev
     - libsqlite3-dev
     - libssh2-1-dev
     - libssl-dev
+    - libtidy-dev
+    - libxml2-dev
     - libxpm4
     - libxrender1
+    - libxslt-dev
     - libyaml-dev
     - lsb-release
     - lxd
