Completely rewritten Maker in ruby

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,6 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[Makefile]
-indent_style = tab
-
 [*.sh]
 indent_style = tab
 
@@ -21,4 +18,10 @@ indent_style = tab
 indent_size = 2
 
 [*.yml]
+indent_size = 2
+
+[*.rb]
+indent_size = 2
+
+[Rakefile]
 indent_size = 2
