--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,5 @@
 ---
-- src: geerlingguy.packer-debian
+#- src: geerlingguy.packer-debian
 - src: geerlingguy.nfs
 - src: geerlingguy.nginx
 - src: geerlingguy.git
